# steering_across_personas

./: .env.example  .gitignore  AllResults.md  CLAUDE.md  CONTRIBUTING.md  OVERVIEW.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  Persona-Conditional Steering Vectors - Experiments.md  README.md  RobustnessResults.md  RobustnessResultsCAA.md  RobustnessResultsIV.md  TODO.md  TransferResults.md  brainstorm.md  check_nan.py  pyproject.toml  run.sh  run_all_experiments.sh  run_plan.md  run_remaining.sh
.github/: PULL_REQUEST_TEMPLATE.md
docs/: causal_pipeline.md  experiments.md  findings.md  mentee_projects.md  overview.md  results_gemma4_e4b.md  x8_steer_then_probe.md
icml2026/: main.tex  references.bib
notebooks/: 00_setup_and_load.ipynb  01_persona_induction.ipynb  01_personas_and_traits.ipynb  02_steering_extraction.ipynb  02_vector_geometry.ipynb  03_shared_specific.ipynb  03_vector_comparison.ipynb  04_cross_persona_steering.ipynb  04_reproduce_figures.ipynb  05_direction_analysis.ipynb  06_figures.ipynb
persona_steering/: __init__.py  analysis.py  config.py  council.py  data.py  evaluation.py  extraction.py  openrouter_judge.py  personas.py  reference.py  sae_loader.py  steering.py  utils.py  wandb_utils.py
pipeline/: 0_generate_data.py  0c_generate_caa_data.py  10_oracle.py  11_oracle_analysis.py  1_generate.py  2_activations.py  2c_caa_activations.py  3_vectors.py  4_analysis.py  5_activation_landscape.py  5_visualize.py  5b_persona_landscape.py  6_behavioral_eval.py  7_eval_analysis.py  8_steered_generation.py  9_steering_eval.py  README.md  e1_layer_sweep.py  (+67 more)
(+3832 files in other folders)
