[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-steering"
version = "0.1.0"
description = "Persona-Conditional Steering Vectors: Do steering vectors for the same trait change depending on which persona the model is operating under?"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.1",
    "transformers>=4.36",
    "nnsight>=0.3",
    "anthropic>=0.39",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "huggingface-hub>=0.20",
    "tqdm>=4.65",
    "jupyter>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
tracking = ["wandb>=0.16"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "ipykernel>=6.0",
    "wandb>=0.16",
]

[tool.setuptools.packages.find]
include = ["persona_steering*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
